# pvm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: HANDOFF.md  SPEC.md
gui/: Cargo.toml  gen_icon.py  tauri.conf.json
gui/capabilities/: default.json
gui/src/: commands.rs  main.rs
src/: ai.rs  archive.rs  cli.rs  commands.rs  config.rs  download.rs  error.rs  lib.rs  main.rs  net.rs  osv.rs  paths.rs  pip.rs  pkg.rs  resolve.rs  selfupdate.rs  shim.rs  snapshot.rs  source_pbs.rs  source_pyorg.rs  system.rs  venv.rs  version.rs  winpath.rs
