[package]
name = "pvm-gui"
version = "0.1.0"
edition = "2021"
description = "pvm 图形界面（Tauri）"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pvm = { path = ".." }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
